syntax = "proto3";
option csharp_namespace = "PreProcessRPC";

service PreprocessService {
  rpc FilterSensor (SensorRequest) returns (SensorResponse);
}

message SensorRequest {
  string wavyId = 1;
  string sensor = 2;
  string value = 3;
  string timestamp = 4;
  repeated double recentValues = 5;
}

message SensorResponse {
  bool isValid = 1;
  double mean = 2;
  double stddev = 3;
  bool isOutlier = 4;
  double deltaFromLast = 5;
  string trend = 6;
  string riskLevel = 7;
  string normalizedTimestamp = 8;
  bool onSchedule = 9;
}
